--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,102 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css">
+    <link   rel="stylesheet" href="static\boostrap\css\bootstrap.min.css"/>
+    
     <title>Document</title>
     <style>
         body{
-            padding-top: 60px;
+           padding-top: 60px; 
         }
-            .tr-head{background: #36caf0;}      
+        .tr-head{background: #dff0d8;}
     </style>
-    <link rel="stylesheet" href="../static/bootstrap/css/bootstrap-responsive.min.css">
+    <link   rel="stylesheet" href="static/bootstrap/css/bootstrap-responsive.min.css"
 </head>
 <body>
+    
     <div class="navbar navbar navbar-inverse navbar-fixed-top">
         <div class="navbar-inner">
             <div class="container">
-            <a class="brand" href="">
-                UTL-IDGS
-            </a>
-            <ul>
-                <li class="active">
-                    <a href="">
-                        <i class="icon-home icon-white"></i>
-                        INICIO
-                    </a>
-                </li>
-                <li class="">
-                    <a href="">
-                        <i class="icon-user icon-white"></i>
-                        USUARIOS
-                    </a>
-                </li>
-                <li class="">
-                    <a href="">
-                        <i class="icon-user icon-white"></i>
-                        ALUMNOS
-                    </a>
-                </li>
-            </ul>
+                <a class="brand" href="">
+                    UTL-IDGS
+                </a>
+                <ul class="nav">
+                    <li>
+                        <a  href="">
+                            <i class="icon-home icon-white"></i>
+                            Inicio
+                        </a>
+                    </li>
+                    <li>
+                        <a  href="">
+                            <i class="icon-user icon-white"></i>
+                            Usuarios
+                        </a>
+                    </li>
+                    <li>
+                        <a  href="">
+                            <i class="icon-user icon-white"></i>
+                            Alumnos
+                        </a>
+                    </li>
+                    
+                </ul>
+
         </div>
     </div>
-</div>
+        
+    </div>
     <div class="container">
-
+        {%block content%}
+        
+        {%endblock%}
     </div>
 
-    {% block content %}
 
-    {% endblock %}
-    
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<div>
-
-</div>
-
-
-
-
-
-
