modificado index clase 03/02/2023

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,5 @@
+{% extends "layout.html"%}
 
-{% extends "layout.html" %}
-
-{% block content %}
-<h1>Hola mundo</h1>
-<h2>El nombre es {{nombre}}</h2>
-
-    {%for item in lista1%}
-    <h3>{{item}}</h3>
-    {%endfor%}
-{% endblock %}  
+{%block content%}
+    <h1>index</h1>            
+{%endblock%}
